<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="10dp"
        app:strokeColor="@color/borderColor"
        app:strokeWidth="0.5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_ordersnumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/ordernumber"
                android:textSize="18dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@id/guidelinestart"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/orderdate"
                android:textSize="18dp"
                android:textColor="@color/orange"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="@id/guidelineend"/>

            <TextView
                android:id="@+id/tv_orderprice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/orderprice"
                android:textSize="18dp"
                app:layout_constraintTop_toBottomOf="@id/tv_ordersnumber"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@id/guidelinestart"/>

            <TextView
                android:id="@+id/tv_orderstatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/orderstatus"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tv_ordersnumber"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="@id/guidelineend"/>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDetails"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounderdbutton"
                android:text="Details"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_orderstatus"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/guidelineend"
                app:layout_constraintStart_toStartOf="@id/guidelinestart" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelinestart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>