<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="@id/guidelineend"
        app:layout_constraintStart_toStartOf="@id/guidelinestart"
        app:layout_constraintTop_toTopOf="@id/guidelinetop" />

    <TextView
        android:id="@+id/tv_loginemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_email"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@id/guidelinestart"
        app:layout_constraintTop_toBottomOf="@id/img_logo"/>

    <EditText
        android:id="@+id/et_inputemail"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:inputType="textEmailAddress"
        android:padding="6dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/edittextbg"
        app:layout_constraintStart_toStartOf="@id/guidelinestart"
        app:layout_constraintTop_toBottomOf="@id/tv_loginemail"
        android:hint="@string/logininputemail"
        app:layout_constraintEnd_toEndOf="@id/guidelineend"/>



    <TextView
        android:id="@+id/tv_loginpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_password"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@id/guidelinestart"
        app:layout_constraintTop_toBottomOf="@id/et_inputemail"/>

    <EditText
        android:id="@+id/et_inputpassword"
        android:layout_width="0dp"
        android:layout_height="44dp"
        app:layout_constraintStart_toStartOf="@id/guidelinestart"
        app:layout_constraintTop_toBottomOf="@id/tv_loginpassword"
        android:hint="@string/ABCD"
        android:layout_marginTop="6dp"
        android:background="@drawable/edittextbg"
        android:inputType="textPassword"
        android:padding="6dp"
        app:layout_constraintEnd_toEndOf="@id/guidelineend"/>

    <ImageView
        android:id="@+id/eyeButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@id/et_inputpassword"
        app:layout_constraintTop_toTopOf="@id/et_inputpassword"
        app:layout_constraintEnd_toEndOf="@id/et_inputpassword"
        android:src="@drawable/ic_eye"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/et_inputpassword"
        app:layout_constraintEnd_toEndOf="@id/et_inputpassword"
        android:text="Sign in"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/rounderdbutton"
        app:layout_constraintTop_toBottomOf="@id/et_inputpassword"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinestart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinetop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />


</androidx.constraintlayout.widget.ConstraintLayout>