<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.DetailsFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/headerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/headerColor"
                android:paddingBottom="10dp"
                app:layout_constraintTop_toTopOf="parent"
                xmlns:app="http://schemas.android.com/apk/res-auto">

                <TextView
                    android:id="@+id/tv_ordersnumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/ordernumber"
                    android:textSize="18dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="@id/guidelinestart"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/orderdate"
                    android:textSize="18dp"
                    android:textColor="@color/orange"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="@id/guidelineend"/>

                <TextView
                    android:id="@+id/tv_orderprice"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/orderprice"
                    android:textSize="18dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_ordersnumber"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="@id/guidelinestart"/>

                <TextView
                    android:id="@+id/tv_orderstatus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/orderstatus"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/tv_ordersnumber"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="@id/guidelineend"/>

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelinestart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.05" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.95" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/orderStatusRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/headerView"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/destinationView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintTop_toBottomOf="@id/orderStatusRV"
                android:background="@color/destinationColor">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/destinationText"
                    android:layout_marginLeft="12dp"
                    android:textSize="18dp"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/orderDestinationRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/destinationView"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>